# calibration-toolbox

./: .gitignore  .readthedocs.yml  BUILD_SUMMARY.md  CONTRIBUTING.md  DOCUMENTATION_WEBSITE.md  LICENSE  README.md  build_docs.sh  pyproject.toml  requirements-dev.txt  run_tests.sh  setup.py
.github/: copilot-instructions.md
.github/workflows/: docs.yml  tests.yml
calibration_toolbox/: __init__.py  metrics.py  visualization.py
docs/: conf.py  index.rst  installation.rst  quickstart.rst  references.rst
docs/api/: index.rst  metrics.rst  visualization.rst
docs/examples/: index.rst
examples/: basic_usage.ipynb
tests/: test_metrics.py  test_visualization.py
